objects/INF_Bugs_Suggestions__c.object
<CustomObject>
    <label>Bugs &amp; Suggestions</label>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>Bug Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs &amp; Suggestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Bug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Bugs &amp; Suggestions</relationshipLabel>
        <relationshipName>Bugs_Suggestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INF_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bug</fullName>
                    <default>true</default>
                    <label>Bug</label>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
                <value>
                    <fullName>Tibco Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INF_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INF_Bug_Number__c</fullName>
        <label>Bug#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>